# qgis-inaturalist-api

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  __init__.py  constants.py  exceptions.py  form_data.py  http_client.py  inaturalist.py  inaturalist_dialog.py  metadata.txt  observation_parser.py  observations.py  places.py  pyproject.toml  qgis_layer_helper.py  requirements-dev.txt
.github/workflows/: contract-test.yml  unit-tests.yml
scripts/: clear_filesystem_cache.sh  pack_plugin.sh
tests/data/: observation_with_coordinates.json
tests/e2e/: test_observations_api_contract.py
tests/unit/: test_form_data.py  test_observation_parser.py
ui/: inaturalist_dialog_base.ui
